refactor frontend using hook && add user-related curd

--- a/material-music-app/src/style/mixin.scss
+++ b/material-music-app/src/style/mixin.scss
@@ -1,3 +1,17 @@
+@mixin text-ellipsis() {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+@mixin text-ellipsis-multi($line) {
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: $line;
+  -webkit-box-orient: vertical;
+}
+
 @mixin flex-center($direction: row) {
   display: flex;
   flex-direction: $direction;
