--- a/material-music-app/src/page/Register/index.scss
+++ b/material-music-app/src/page/Register/index.scss
@@ -2,6 +2,10 @@
   margin-top: 20px !important;
 }
 
+.avatar-input {
+  display: none;
+}
+
 .login-avatar-container {
   display: flex;
   width: 100%;
