--- a/material-music-app/src/style/reset.scss
+++ b/material-music-app/src/style/reset.scss
@@ -135,6 +135,8 @@ a {
   font-size: 100%;
   vertical-align: baseline;
   background: transparent;
+  text-decoration: none;
+  color: inherit;
 }
 
 ins {
