--- a/material-music-app/src/components/SongListCard/index.scss
+++ b/material-music-app/src/components/SongListCard/index.scss
@@ -1,34 +1,33 @@
-.song-list-card {
-  flex-direction: column;
-  height: 100%;
-  margin-bottom: 10px !important;
-  padding: 5px;
-  cursor: pointer;
+.song-list-img-warp {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  border-radius: 5px;
+  overflow: hidden;
 
-  .song-list-img-warp {
-    position: relative;
+  &:hover .song-list-img {
+    width: 130%;
+    height: 130%;
+  }
+  
+  .song-list-img {
+    @include abs-center();
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    
-    .song-list-img {
-      width: 100%;
-      height: 100%;
-      border-radius: 5px;
-    }
-
-    .song-list-img-cover {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-    }
+    transition: all 1.5s;
   }
 
-  .song-list-name {
-    font-size: 14px;
-    @include text-ellipsis-multi(2);
-    margin-top: 3px;
+  .song-list-img-cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
   }
+}
 
+.song-list-name {
+  font-size: 14px;
+  @include text-ellipsis-multi(2);
+  margin-top: 10px;
 }
