--- a/material-music-app/src/style/mixin.scss
+++ b/material-music-app/src/style/mixin.scss
@@ -18,3 +18,10 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin abs-center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
