--- a/material-music-app/src/style/global.scss
+++ b/material-music-app/src/style/global.scss
@@ -24,3 +24,12 @@ body {
 .MuiInput-underline:after {
   border-color: var(--input-color) !important;
 }
+
+@media screen and (max-width: 768px) {
+  body {
+    ::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+    }
+  }
+}
