--- a/material-music-app/src/layout/Menu/index.scss
+++ b/material-music-app/src/layout/Menu/index.scss
@@ -3,6 +3,7 @@
   background-color: var(--menu-bgcolor);
   box-shadow: 0 10px 30px -12px rgba(0, 0, 0, 0.42), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
   overflow: auto;
+  padding-bottom: $player_height;
   z-index: 10;
 
   .MuiPaper-root {
