--- a/material-music-app/src/components/SongCard/index.scss
+++ b/material-music-app/src/components/SongCard/index.scss
@@ -1,44 +1,51 @@
-.song-id {
-  flex-basis: 30px;
-  text-align: center;
-}
+.song-card {
+  display:flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
 
-.song-img-warp {
-  position: relative;
-  width: 80px;
-  height: 80px;
-  overflow: hidden;
-  margin-left: 10px;
+  .song-id {
+    flex-basis: 30px;
+    text-align: center;
+  }
   
-  .song-img {
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
+  .song-img-warp {
+    position: relative;
+    width: 80px;
+    height: 80px;
+    overflow: hidden;
+    margin-left: 10px;
+    
+    .song-img {
+      width: 100%;
+      height: 100%;
+      border-radius: 5px;
+    }
+  
+    .song-img-cover {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+    }
   }
-
-  .song-img-cover {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-  }
-}
-
-.song-warp {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  margin-left: 10px;
-
-  .song-name {
-    font-size: 16px;
-    font-weight: bold;
-    @include text-ellipsis-multi(1);
-  }
-
-  .song-detail {
-    font-size: 14px;
-    margin-top: 10px;
-    @include text-ellipsis-multi(1);
+  
+  .song-warp {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    margin-left: 10px;
+  
+    .song-name {
+      font-size: 16px;
+      font-weight: bold;
+      @include text-ellipsis-multi(1);
+    }
+  
+    .song-detail {
+      font-size: 14px;
+      margin-top: 10px;
+      @include text-ellipsis-multi(1);
+    }
   }
 }
