--- a/material-music-app/src/components/SongListCard/index.scss
+++ b/material-music-app/src/components/SongListCard/index.scss
@@ -1,33 +1,37 @@
-.song-list-img-warp {
-  position: relative;
+.song-list-card {
   width: 100%;
-  height: 0;
-  padding-bottom: 100%;
-  border-radius: 5px;
-  overflow: hidden;
 
-  &:hover .song-list-img {
-    width: 130%;
-    height: 130%;
+  .song-list-img-warp {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    border-radius: 5px;
+    overflow: hidden;
+  
+    &:hover .song-list-img {
+      width: 130%;
+      height: 130%;
+    }
+    
+    .song-list-img {
+      @include abs-center();
+      width: 100%;
+      height: 100%;
+      transition: all 1.5s;
+    }
+  
+    .song-list-img-cover {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+    }
   }
   
-  .song-list-img {
-    @include abs-center();
-    width: 100%;
-    height: 100%;
-    transition: all 1.5s;
+  .song-list-name {
+    font-size: 14px;
+    @include text-ellipsis-multi(2);
+    margin-top: 10px;
   }
-
-  .song-list-img-cover {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-  }
-}
-
-.song-list-name {
-  font-size: 14px;
-  @include text-ellipsis-multi(2);
-  margin-top: 10px;
 }
